Flex layout now picks up initial visibility of child views.

Should be at least progress towards (if not a fix for) the Cast bug, as
well as a prerequisite for issue #916092.

Bug: 916201
Change-Id: I6f89e3eb2245a536ce504603050a9467c15a4cee
Reviewed-on: https://chromium-review.googlesource.com/c/1383532
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617968}
Former-commit-id: c87ad633b6c4f9aac5834ceb8f3f893534231673